[gd_scene load_steps=20 format=3 uid="uid://cg0b7sdi80pfr"]

[ext_resource type="Script" path="res://characters/npc_trader.gd" id="1_dswqf"]
[ext_resource type="Texture2D" uid="uid://tk3sakhhdiw6" path="res://art/character assets/Mushroom with VFX/Mushroom-Idle.png" id="2_simvq"]
[ext_resource type="Texture2D" uid="uid://dlduc5l4cuawj" path="res://art/misc personal assets/text_bubble.png" id="3_b4ys2"]
[ext_resource type="Texture2D" uid="uid://b3x2113801wis" path="res://art/keybord and controller icons/individual sprites/keyboard/C button.png" id="4_jr3ip"]
[ext_resource type="Texture2D" uid="uid://b6e0psoavltdk" path="res://art/items.png" id="4_w5igx"]
[ext_resource type="Texture2D" uid="uid://cha0e8mdeni4a" path="res://art/keybord and controller icons/individual sprites/keyboard/= equal.png" id="5_dw85i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aoa0w"]
size = Vector2(12, 13.5)

[sub_resource type="Animation" id="Animation_qo2la"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v4bha"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_qll3m"]
resource_name = "sleep"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_hkvot"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nmcrp"]
_data = {
"RESET": SubResource("Animation_qo2la"),
"idle": SubResource("Animation_v4bha"),
"sleep": SubResource("Animation_qll3m"),
"walk": SubResource("Animation_hkvot")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3b6yn"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_miuwl"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3b6yn")
blend_point_0/pos = 0.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j7iyq"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_axu6e"]
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_miuwl")
states/Idle/position = Vector2(392, 93)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_j7iyq")]

[sub_resource type="AtlasTexture" id="AtlasTexture_8yffa"]
atlas = ExtResource("4_w5igx")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx4yx"]
atlas = ExtResource("4_w5igx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_t6ref"]
radius = 50.0

[node name="npc_trader" type="CharacterBody2D"]
script = ExtResource("1_dswqf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_simvq")
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.25)
shape = SubResource("RectangleShape2D_aoa0w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nmcrp")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_axu6e")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = -0.00162601

[node name="Timer" type="Timer" parent="."]

[node name="speech_bubble" type="NinePatchRect" parent="."]
offset_left = -17.0
offset_top = -50.0
offset_right = 74.0
offset_bottom = -7.0
texture = ExtResource("3_b4ys2")

[node name="input_text" type="RichTextLabel" parent="speech_bubble"]
layout_mode = 0
offset_left = 15.0
offset_top = 10.0
offset_right = 45.0
offset_bottom = 54.0
scale = Vector2(0.3, 0.3)
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "3x"

[node name="arrow" type="RichTextLabel" parent="speech_bubble"]
layout_mode = 0
offset_left = 41.0
offset_top = 10.0
offset_right = 91.0
offset_bottom = 43.0
scale = Vector2(0.3, 0.3)
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "----->"

[node name="output_text" type="RichTextLabel" parent="speech_bubble"]
layout_mode = 0
offset_left = 55.0
offset_top = 10.0
offset_right = 95.0
offset_bottom = 47.0
scale = Vector2(0.3, 0.3)
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "6x"

[node name="input_sprite" type="Sprite2D" parent="speech_bubble"]
position = Vector2(31, 14)
scale = Vector2(0.8, 0.8)
texture = SubResource("AtlasTexture_8yffa")

[node name="output_sprite" type="Sprite2D" parent="speech_bubble"]
position = Vector2(72, 14)
scale = Vector2(0.8, 0.8)
texture = SubResource("AtlasTexture_xx4yx")

[node name="chat_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_t6ref")

[node name="c_key" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -10)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_jr3ip")

[node name="equal_key" type="Sprite2D" parent="."]
visible = false
position = Vector2(50, -15)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_dw85i")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="chat_detection" to="." method="_on_chat_detection_body_entered"]
[connection signal="body_exited" from="chat_detection" to="." method="_on_chat_detection_body_exited"]
